Добавлены базовые классы для работы, с приложением
- Добавлены базовые классы для работы с приложением
- Разработан дизайн приложение
- Создано окно авторизации
- Создана логика авторизации
- Добавлены базовые стили

--- a/CarAccoutingGibdd/CarAccoutingGibdd/CarAccountingGibdd.csproj
+++ b/CarAccoutingGibdd/CarAccoutingGibdd/CarAccountingGibdd.csproj
@@ -9,12 +9,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\LogoGibdd.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MahApps.Metro.IconPacks" Version="5.1.0" />
+    <PackageReference Include="MaterialDesignThemes.MahApps" Version="5.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.14">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pages\" />
+    <Folder Include="UserControls\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\LogoGibdd.ico" />
   </ItemGroup>
 
 </Project>
