--- a/CarAccountingGibdd/CarAccountingGibdd/CarAccountingGibdd.csproj
+++ b/CarAccountingGibdd/CarAccountingGibdd/CarAccountingGibdd.csproj
@@ -11,9 +11,13 @@
   <ItemGroup>
     <None Remove="Resources\GifLoadCat.gif" />
     <None Remove="Resources\LogoGibdd.png" />
+    <None Remove="Resources\PrintGibdd.jpg" />
+    <None Remove="Resources\Signature.jpg" />
+    <None Remove="Resources\Signature.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="iTextSharp" Version="5.5.13.4" />
     <PackageReference Include="MaterialDesignThemes.MahApps" Version="5.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.14">
@@ -28,6 +32,10 @@
     <Resource Include="Resources\GifLoadCat.gif" />
     <Resource Include="Resources\IconGibdd.ico" />
     <Resource Include="Resources\LogoGibdd.png" />
+    <Resource Include="Resources\PrintGibdd.jpg" />
+    <Resource Include="Resources\Signature.jpg" />
+    <Resource Include="Resources\Signature.png" />
+    <Resource Include="Resources\SignatureGibdd.jpg" />
   </ItemGroup>
 
 </Project>
