--- a/CarAccountingGibdd/CarAccountingGibdd/CarAccountingGibdd.csproj
+++ b/CarAccountingGibdd/CarAccountingGibdd/CarAccountingGibdd.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.105.0" />
     <PackageReference Include="DnsClient" Version="1.8.0" />
     <PackageReference Include="iTextSharp" Version="5.5.13.4" />
     <PackageReference Include="MaterialDesignThemes.MahApps" Version="5.2.1" />
