--- a/CarAccountingGibdd/CarAccountingGibdd/CarAccountingGibdd.csproj
+++ b/CarAccountingGibdd/CarAccountingGibdd/CarAccountingGibdd.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <None Remove="Resources\GifLoadCat.gif" />
+    <None Remove="Resources\LoadingGif.gif" />
     <None Remove="Resources\LogoGibdd.png" />
     <None Remove="Resources\Signature.png" />
   </ItemGroup>
@@ -31,6 +32,7 @@
   <ItemGroup>
     <Resource Include="Resources\GifLoadCat.gif" />
     <Resource Include="Resources\IconGibdd.ico" />
+    <Resource Include="Resources\LoadingGif.gif" />
     <Resource Include="Resources\LogoGibdd.png" />
     <Resource Include="Resources\Signature.png" />
   </ItemGroup>
