--- a/CarAccountingGibdd/CarAccountingGibdd.csproj
+++ b/CarAccountingGibdd/CarAccountingGibdd.csproj
@@ -6,11 +6,13 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>Resources\IconGibdd.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="config.json" />
     <None Remove="Resources\GifLoadCat.gif" />
+    <None Remove="Resources\IconGibdd.ico" />
     <None Remove="Resources\LoadingGif.gif" />
     <None Remove="Resources\LogoGibdd.png" />
   </ItemGroup>
@@ -37,6 +39,7 @@
     <Content Include="config.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\IconGibdd.ico" />
     <Resource Include="Resources\GifLoadCat.gif" />
     <Resource Include="Resources\IconGibdd.ico" />
     <Resource Include="Resources\LoadingGif.gif" />
